--- a/Cyber Security.html
+++ b/Cyber Security.html
@@ -768,9 +768,9 @@
             </div>
             <nav class="main-nav" id="main-nav">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="">Home</a></li>
                     <li class="dropdown">
-                        <a href="/Cyber Security.html">About Cybersecurity<i class="fas fa-chevron-down dropdown-arrow"></i></a>
+                        <a href="/Cyber Security.html"> Cyber Security<i class="fas fa-chevron-down dropdown-arrow"></i></a>
                         <div class="dropdown-content">
                             <a href="#">Data Privacy</a>
                             <a href="#">Network Security</a>
