--- a/sci and tech.html
+++ b/sci and tech.html
@@ -768,7 +768,7 @@
             </div>
             <nav class="main-nav" id="main-nav">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="">Home</a></li>
                     <li class="dropdown">
                         <a href="/sci and tech.html">Science and Technology<i class="fas fa-chevron-down dropdown-arrow"></i></a>
                         <div class="dropdown-content">
