--- a/blog-post.html
+++ b/blog-post.html
@@ -882,7 +882,7 @@
                 ☰
             </button>
             <div class="logo-container">
-                <a href="#" class="logo-text">CyberWise</a><img src="/Nepal flag.gif" alt="Nepal Flag" width="35" height="35"> <div class="logo-subtext">Your Tech Insights</div>
+                <a href="/index.html" class="logo-text">CyberWise</a><img src="/Nepal flag.gif" alt="Nepal Flag" width="35" height="35"> <div class="logo-subtext">Your Tech Insights</div>
             </div>
 
             <div class="top-bar">
