--- a/protect-data-online.html
+++ b/protect-data-online.html
@@ -767,6 +767,7 @@
                 <div class="logo-subtext">Your Tech Insights</div>
             </div>
             <nav class="main-nav" id="main-nav">
+                <ul><li><a href="/index.html">Home Page</a></li></ul>
             </nav>
             <div class="header-meta">
                 <span id="current-date-time"></span>
