--- a/Darkweb.html
+++ b/Darkweb.html
@@ -768,7 +768,7 @@
             </div>
             <nav class="main-nav" id="main-nav">
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li class="dropdown">
                         <a href="/Darkweb.html">Dark Web<i class="fas fa-chevron-down dropdown-arrow"></i></a>
                         <div class="dropdown-content">
