--- a/IT.html
+++ b/IT.html
@@ -770,7 +770,7 @@
                 <ul>
                     <li><a href="/index.html">Home</a></li>
                     <li class="dropdown">
-                        <a href="/IT.html">TI Related<i class="fas fa-chevron-down dropdown-arrow"></i></a>
+                        <a href="/IT.html">IT Related<i class="fas fa-chevron-down dropdown-arrow"></i></a>
                         <div class="dropdown-content">
                             <a href="#">IT Management</a>
                             <a href="#">Cloud Computing</a>
