--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="/AI.html">About Artificial Intelligence (AI) </a></li>
                         <li><a href="#">AI & Machine Learning</a></li>
-                        <li><a href="#">Generative AI</a></li>
+                        <li><a href="#">Free and List of AI</a></li>
                         <li><a href="#">AI Ethics</a></li>
                         <li><a href="#">AI Applications</a></li>
                         <li><a href="#">AI Development</a></li>
