--- a/AI.html
+++ b/AI.html
@@ -773,7 +773,7 @@
                         <a href="/AI.html">Artificial Intelligence (AI) <i class="fas fa-chevron-down dropdown-arrow"></i></a>
                         <div class="dropdown-content">
                             <a href="/AI.html#types">AI & Machine Learning</a>
-                            <a href="/AI.html#applications">Generative AI</a>
+                            <a href="/List-of-AI.html">List of Free AI Tools</a>
                             <a href="/AI.html#benefits">AI Ethics</a>
                             <a href="/AI.html#future">AI Applications</a>
                             <a href="#">AI Development</a>
