--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
                     <a href="#"> Artificial Intelligence (AI) <span class="dropdown-arrow">▼</span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/AI.html">About Artificial Intelligence (AI) </a></li>
-                        <li><a href="/List-of-AI.html">Free and List of AI</a></li>                        
+                        <li><a href="/List-of-AI.html">List of Free AI Tools </a></li>                        
                         <li><a href="#">AI & Machine Learning</a></li>
                         <li><a href="#">AI Ethics</a></li>
                         <li><a href="#">AI Applications</a></li>
