--- a/About Me.html
+++ b/About Me.html
@@ -225,7 +225,7 @@
                 <img src="/bhaskar.webp" alt="Bhaskar Sah Profile Picture" class="author-avatar w-32 h-32 rounded-full object-cover border-4 shadow-md mb-6">
 
                 <h1 class="premium-heading text-3xl font-bold mb-2">Bhaskar Sah</h1>
-                      <a href="/index.html"><h2>WebSite:- <u><b>CyberWise Tech Insight</b></u></h2></a>
+                      <a href="https://bhaskarsah.com.np" target="_blank"><h2>WebSite:- <u><b>CyberWise Tech Insight</b></u></h2></a>
 
                       <br>
 
