--- a/Sci&Tech.html
+++ b/Sci&Tech.html
@@ -763,12 +763,11 @@
     <header class="main-header">
         <div class="header-content">
             <div class="logo-container">
-                <a class="logo-text">CyberWise</a><img src="/Nepal flag.gif" width="30" height="13">
+                <a href="https://bhaskarsah.com.np" class="logo-text">CyberWise<img src="/Nepal flag.gif" width="30" height="13"></a>
                 <div class="logo-subtext">Your Tech Insights</div>
             </div>
             <nav class="main-nav" id="main-nav">
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
                     <li class="dropdown">
                         <a href="/Sci&Tech.html">Science and Technology<i class="fas fa-chevron-down dropdown-arrow"></i></a>
                         <div class="dropdown-content">
