--- a/contact.html
+++ b/contact.html
@@ -427,12 +427,11 @@ h1, h2, h3 {
     <header class="site-header">
         <div class="container header-container">
            <div class="logo-container">
-                <a href="#" class="logo-text">CyberWise</a><img src="/Nepal flag.gif" width="30" height="13">
+                <a href="https://bhaskarsah.com.np" class="logo-text">CyberWise<img src="/Nepal flag.gif" width="30" height="13"></a>
                 <div class="logo-subtext">Your Tech Insights</div>
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
                     <li><a href="/About Me.html">About</a></li>
                     <li><a href="/contact.html" class="active">Contact</a></li>
                 </ul>
