--- a/protect-data-online.html
+++ b/protect-data-online.html
@@ -763,11 +763,10 @@
     <header class="main-header">
         <div class="header-content">
             <div class="logo-container">
-                <a class="logo-text">CyberWise</a><img src="/Nepal flag.gif" width="30" height="13">
+                <a href="https://bhaskarsah.com.np" class="logo-text">CyberWise<img src="/Nepal flag.gif" width="30" height="13"></a>
                 <div class="logo-subtext">Your Tech Insights</div>
             </div>
             <nav class="main-nav" id="main-nav">
-                <ul><li><a href="/index.html">Home Page</a></li></ul>
             </nav>
             <div class="header-meta">
                 <span id="current-date-time"></span>
