--- a/List-of-AI.html
+++ b/List-of-AI.html
@@ -853,6 +853,8 @@
 </head>
 <body>
 
+        <p>AI tools are quickly emerging in many occupations, whether you're a student, creator, developer, entrepreneur, or business owner. The most convenient part is that a majority of these tools are free! They help with writing, image generation, research, coding, productivity, design, translation, and much more. The following guide contains a thorough and well-structured list of free AI tools, their links, and descriptions that can help you conveniently navigate the tools and select those that suit your needs.</p>
+
 <!-- 1. GENERAL AI ASSISTANTS -->
 <div class="category">
     <h2>1. General AI Assistants</h2>
@@ -1024,6 +1026,8 @@
         <li><a href="https://photopea.com" target="_blank">Photopea:</a> Online Photoshop-style editor.</li>
     </ul>
 </div>
+
+<p>While there’s no such thing as a free lunch, you can grab these free AI tools without any investment to spur your creativity, productivity and learning. No matter whether you’re working on images, videos, automation, studying or software development, the perfect AI tool will help you get your work done quicker and easier. As AI evolves, more and more powerful tools will be made available to the general public. Try out the tools above, experiment with them and find which one suits your workflow best. The future of AI is here and it’s free to everyone to use.</p>
 
 </body>
 </html>
