--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
     </script>
 
-    <meta property="og:site_name" content="CyberWise">
+    <meta property="og:CyberWise" content="CyberWise">
 
     <style>
         
