--- a/Ransomware-attack.html
+++ b/Ransomware-attack.html
@@ -767,6 +767,10 @@
                 <div class="logo-subtext">Your Tech Insights</div>
             </div>
             <nav class="main-nav" id="main-nav">
+                <ul>  
+                    <li><a href="/About Me.html">About Me</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                </ul>
             </nav>
             <div class="header-meta">
                 <span id="current-date-time"></span>
