--- a/protect-data-online.html
+++ b/protect-data-online.html
@@ -767,7 +767,12 @@
                 <div class="logo-subtext">Your Tech Insights</div>
             </div>
             <nav class="main-nav" id="main-nav">
+                <ul>  
+                    <li><a href="/About Me.html">About Me</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                </ul>
             </nav>
+
             <div class="header-meta">
                 <span id="current-date-time"></span>
                 <button id="dark-mode-toggle" class="dark-mode-toggle" aria-label="Toggle Dark Mode">
