--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
                     <a href="/Darkweb-post.html"> Dark Web </a>
                 </li>
                   <li class="has-dropdown">
-                    <a href="/IT-post.html"> TI Related</a>
+                    <a href="/IT-post.html"> IT Related</a>
                 </li>
             <li class="has-dropdown">
                     <a href="#"> Account and Keys <span class="dropdown-arrow">▼</span></a>
