--- a/Darkweb-post.html
+++ b/Darkweb-post.html
@@ -951,7 +951,7 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="#">Account</a></li>
-                        <li><a href="#">Keys</a></li>
+                        <li><a href="/password-security-analyzer.html">Password Security Analyzer</a></li>
                         <li><a href="/blog-post.html">Blog Post</a></li>
                         <li><a href="/password.html">Password Generator</a></li>
                         <li><a href="/secure.html">Secure URL Checker</a></li>
